--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="pink_200">#F48FB1</color>
     <color name="pink_500">#E91E63</color>
     <color name="pink_700">#C2185B</color>
+    <color name="alas">#F57F17</color>
+    <color name="tinggi">#2E7D32</color>
+    <color name="hasil">#D32F2F</color>
 </resources>
